# home-taker

./: .env.example  LICENSE  README.md  pyproject.toml
.agent/skills/qdrant-vector-search/: SKILL.md
.claude/skills/ai-memory/: LICENSE.txt  SKILL.md
backend/: CLAUDE.md  __init__.py  config.py  main.py  models.py
backend/data/: preferences.json
backend/routes/: __init__.py  chat.py  logs.py  preferences.py  rag.py
backend/services/: __init__.py  cognee_service.py  document_service.py  qdrant_service.py  storage.py
backend/utils/: __init__.py  formatters.py
frontend/src/: App.jsx  index.css
frontend/src/components/: BottomNav.jsx  FormInputs.jsx  Icons.jsx  SavingOverlay.jsx
frontend/src/screens/: Chat.jsx  Dashboard.jsx  Log.jsx  Onboarding.jsx  Schedule.jsx  SplashScreen.jsx  UserTypeScreen.jsx
frontend/src/services/: api.js
frontend/src/styles/: colors.js
